<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <ImageButton
            android:id="@+id/blinkerLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/blinker_left"
            android:onClick="onClick"
            android:src="@drawable/blinker_left_off" />

        <ImageButton
            android:id="@+id/blinkerRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/blinker_right"
            android:onClick="onClick"
            android:src="@drawable/blinker_right_off" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <ImageButton
            android:id="@+id/mainBeam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/mainbeam"
            android:src="@drawable/mainbeam_off" />

        <ImageButton
            android:id="@+id/positionLowBeam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/position_lowbeam"
            android:onClick="onClick"
            android:src="@drawable/position_off_lowbeam_off" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <ImageButton
            android:id="@+id/warning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/warning"
            android:onClick="onClick"
            android:src="@drawable/warning_off" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <ImageButton
            android:id="@+id/stopLight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/stoplight"
            android:onClick="onClick"
            android:src="@drawable/stoplight_off" />

        <ImageButton
            android:id="@+id/backLight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/backlight"
            android:onClick="onClick"
            android:src="@drawable/backlight_off" />

    </TableRow>

</TableLayout>